overflow-x: hidden; added to html and body so normal nav bar can disappear correctly

--- a/css/general.css
+++ b/css/general.css
@@ -83,6 +83,7 @@ Medium:
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -90,6 +91,8 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #444;
+
+  overflow-x: hidden;
 }
 
 strong {
